# laziest

./: .gitignore  .laziestignore  LICENSE  README.md  README.rst  pyproject.toml  requirements.txt  setup.cfg  tox.ini
docs/source/: conf.py  ifs.rst  index.rst  steps.rst
laziest/: __init__.py  analyzer.py  arg_generators.py  argsgen.py  asserter.py  ast_example.py  ast_meta.py  cmd.py  codegen.py  core.py  diff.py  functions.py  generator.py  params.py  parser.py  random_generators.py  sample.py  strings.py  test.py  utils.py  walker.py
laziest/conf/: astp.py  cli.py  cli.yaml  config.py  default_conf.cfg
src/laziest/: blueprint.py  cmd.py  config.py  core.py  defaults.py  parser.py
src/laziest/conf/: cli.yaml
tests/code_sample/done/: class_primitive.py  conditions.py  for_blocks.py  functions_with_args.py  multiple_operations.py  numeric_operators.py  primitive_code.py  steps.py  type_by_attribute.py  with_type_annotation.py
tests/code_sample/in_process/: in_args.py  multiple_operations.py  multiple_operations_add.py  steps.py  steps_add.py  type_by_attribute.py  type_by_attribute_add.py  type_variations.py  with_lists.py
tests/code_sample/todo/: class_primitive_with_init.py  convertable_types.py  in_args.py  multiple_operations.py  multiple_operations_add.py  numeric_operators_add.py  string_formats.py  type_by_attribute_add.py  type_variations.py
tests/code_sample/warning/: not_safety_code.py
tests/done/: conditions.py  functions_with_args.py  primitive_code.py  with_dicts.py
tests/functional/: conditions.py  functions_with_args.py  not_safety_code.py  primitive_code.py  tests_with_auger_compare.py
tests/in_process/: conditions.py  numeric_operators.py  string_formats.py  with_dicts.py
tests/todo/: class_for_test.py  type_variations.py
tests/unittests/: class_for_test.py  functions_with_args.py  primitive_code.py
