[tool.poetry]
name = "laziest"
version = "0.0.dev3"
description = ""
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/xnuinside/laziest"
repository = "https://github.com/xnuinside/laziest"
authors = ["xnuinside <xnuinside@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
codegraph = "^0.0.4"
clifier = "^0.0.3"
black = {version = "^18.3-alpha.0", allows-prereleases = true}

[tool.poetry.dev-dependencies]
pytest = "^5.3"

[tool.poetry.scripts]
lazy = 'laziest.conf.cli:init_cli'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"