[metadata]
version=0.0.1
name = laziest
author = Iuliia Volkova
url = https://github.com/xnuinside/laziest
long_description = file:README.rst
email = xnuinside@gmail.com

[bdist_wheel]
universal = 1

[options]
include_package_data = True
package_dir =
    = src
packages =
    laziest
zip_safe = False

[options.entry_points]
console_scripts =
    laziest = laziest.cmd:main
