[metadata]
version=0.0.2
name = laziest
author = Iuliia Volkova
url = https://github.com/xnuinside/laziest
long_description = file:README.md
long_description_content_type=text/markdown
email = xnuinside@gmail.com

[bdist_wheel]
universal = 1

[options]
include_package_data = True
package_dir =
    = src
packages =
    laziest
zip_safe = False

[options.package_data]
laziest = conf/*.yaml

[options.entry_points]
console_scripts =
    laziest = laziest.core:main
